Issue #118 - Navigation items in the header flickering when selected fix

--- a/public/static/css/main.styl
+++ b/public/static/css/main.styl
@@ -35,16 +35,32 @@ a
 
 #navbar
   top 55px
-  right 0
+  right 125px
   position absolute
   font-size 15pt
+
+.persona-buttons
+  top 76px
+  right 0px
+  position absolute
+
+#login, #logout
+  top 0
+
+.persona-button span
+  padding-left 44px
+  font-size 11pt
+  color #fff
+
+.persona-button span:hover
+  color #fff
 
 #body_index #navbar-videos,
 #body_video #navbar-videos,
 #body_cheatsheet #navbar-cheatsheet,
 #body_about #navbar-about,
 #body_stats #navbar-stats
-  font-weight bold
+  //font-weight bold
   border-bottom 3px solid #a8b4c3
 
 #navbar li
@@ -216,18 +232,4 @@ ul.videos span.watched
 #footer ul.navigation li + li::before
   content " / "
   padding 10px
-
-.persona-button
-  top 5px
-
-#login, #logout
-  display none
-
-.persona-button span
-  padding-left 44px
-  font-size 11pt
-  color #fff
-
-.persona-button span:hover
-  color #fff
 
